argocd/backstage/clusters/shashank-b1/apps/keith-react-app/app/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    backstage.io/kubernetes-id: keith-react-app
---
apiVersion: v1
kind: Service
metadata:
  name: keith-react-app
  namespace: test
  labels:
    app: keith-react-app
    backstage.io/kubernetes-id: keith-react-app
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: keith-react-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keith-react-app
  namespace: test
  labels:
    backstage.io/kubernetes-id: keith-react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keith-react-app
  template:
    metadata:
      labels:
        app: keith-react-app
        backstage.io/kubernetes-id: keith-react-app
    spec:
      serviceAccountName: keith-react-app
      containers:
      - image: docker.io/kcbabo/keith-react-app:latest
        imagePullPolicy: Always
        name: keith-react-app
        ports:
        - containerPort: 80
